--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,15 @@
 {ConversionTime:-1,
-DropChances:[0:0.085f,1:0.085f,2:0.085f,3:0.085f,4:0.085f,],
+DropChances:[0:0f,1:0f,2:0f,3:0f,4:0.f,],
 UUIDLeast:-6659457848044035511L,
 Attributes:[
 	0:{Name:"generic.maxHealth",Base:20.0d,},
-	1:{Name:"generic.knockbackResistance",
-		Base:0.0d,
-		Modifiers:[
-			0:{Name:"Random spawn bonus",
-				UUIDLeast:-8307789816879260560L,
-				Operation:0,Amount:0.04289346990364999d,
-				UUIDMost:-9129499374995354767L,},],},
-	2:{Name:"generic.movementSpeed",
-		Base:0.23000000417232513d,},
-	3:{Name:"generic.followRange",
-		Base:35.0d,
-		Modifiers:[
-			0:{Name:"Random spawn bonus",
-				UUIDLeast:-7965490078510326325L,
-				Operation:1,
-				Amount:0.029584142131467178d,
-				UUIDMost:5520219719219954836L,},],},
-	4:{Name:"generic.attackDamage",
-		Base:3.0d,},
-	5:{Name:"zombie.spawnReinforcements",
-		Base:0.0351658771675046d,},],
+	1:{Name:"generic.knockbackResistance",Base:0.0d,Modifiers:[0:{Name:"Random spawn bonus",UUIDLeast:-8307789816879260560L,Operation:0,Amount:0.04289346990364999d,UUIDMost:-9129499374995354767L,},],},
+	2:{Name:"generic.movementSpeed",Base:0.23000000417232513d,},
+	3:{Name:"generic.followRange",Base:35.0d,Modifiers:[0:{Name:"Random spawn bonus",UUIDLeast:-7965490078510326325L,Operation:1,Amount:0.029584142131467178d,UUIDMost:5520219719219954836L,},],},
+	4:{Name:"generic.attackDamage",Base:3.0d,},
+	5:{Name:"zombie.spawnReinforcements",Base:0d,},],
 Motion:[0:0.0d,1:-0.0784000015258789d,2:0.0d,],
-Health:20s,
+Health:0s,
 HealF:20.0f,
 Fire:-1s,
 NoAI:1,
@@ -38,9 +22,10 @@ OnGround:1b,
 HurtTime:0s,
 UUIDMost:2175732296001209060L,
 HurtByTimestamp:0,
-Dimension:0,Air:300s,
+Dimension:0,
+Air:300s,
 Pos:[0:-401.5d,1:4.0d,2:380.5d,],
-CanPickUpLoot:1b,
+CanPickUpLoot:0b,
 PortalCooldown:0,
 PersistenceRequired:0b,
 Leashed:0b,
